--- a/public/style.css
+++ b/public/style.css
@@ -1,28 +1,29 @@
 body {
 	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-image: linear-gradient(rgba(175, 168, 202, 0.8),rgba(155, 99, 116, 0.8)),url(./unnamed\ \(1\).png);
+	background-image: linear-gradient(rgba(175, 168, 202, 0.8), rgba(155, 99, 116, 0.8)), url(./unnamed\ \(1\).png);
 }
 
 .container {
-    width: 70%;
-    margin:auto;
+	width: 70%;
+	margin: auto;
 	/* color: aliceblue; */
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-image: linear-gradient(rgba(203, 104, 216, 0.8),rgba(247, 57, 114, 0.8)),url(./unnamed\ \(1\).png);
-    background-size: cover;
-    background-repeat: no-repeat;
-    border: solid black;
-    border-radius: 25px;
-    position: sticky;
-    top: 0;
-    border: 1px solid wheat;
-    color: black;
-    outline: none;
-    transition: .6s ease;
-    border-radius: 25px;
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	background-image: linear-gradient(rgba(203, 104, 216, 0.8), rgba(247, 57, 114, 0.8)), url(./unnamed\ \(1\).png);
+	background-size: cover;
+	background-repeat: no-repeat;
+	border: solid black;
+	border-radius: 25px;
+	position: sticky;
+	top: 0;
+	border: 1px solid wheat;
+	color: black;
+	outline: none;
+	transition: .6s ease;
+	border-radius: 25px;
 }
+
 img {
 	display: inline-block;
 }
@@ -30,6 +31,26 @@ img {
 .caption {
 	display: block;
 	text-align: center;
+}
+
+.eachGarment button {
+	width: 70px;
+	margin: auto;
+	height: 30px;
+	background-color: whitesmoke;
+	border: 1px solid wheat;
+	color: black;
+	outline: none;
+	transition: .6s ease;
+	border-radius: 25px
+}
+
+.eachGarment button:hover {
+	cursor: pointer;
+	background-color: rgb(241, 181, 233);
+	color: black;
+	box-shadow: 0 0 5px white, 0 0 10px white, 0 0 15px white;
+	font-weight: bold;
 }
 
 .garments {
@@ -41,9 +62,10 @@ img {
 	flex: 1;
 	background-color: beige;
 	border: 1px solid greenyellow;
-	padding: 1em;
-	margin: 0.25em;
+	margin: 5em;
 	border-radius: 0.5em;
+	width: 30%;
+	padding: 2em;
 }
 
 .hidden {
@@ -52,13 +74,22 @@ img {
 
 .field label {
 	display: block;
-	width: 5em;
-	margin-top: 0.5em;
+	/* padding: 0.5%; */
 }
 
-.mt1 {
-	margin-top: 1em;
+.mt1 form {
+	width: 30%;
+	padding: 2em;
+	/* display: flex; */
 }
+
+.eachGarment {
+	border-style: solid;
+	padding: 0.5em;
+	margin: 3%;
+	border-radius: 15%;
+}
+
 
 
 .message {
@@ -83,17 +114,18 @@ a {
 }
 
 .mt1 button {
-		width: 150px;
-		margin: auto;
-		height: 50px;
-		background-color:whitesmoke;
-		border: 1px solid wheat;
-		color: black;
-		outline: none;
-		transition: .6s ease;
-		border-radius: 25px	
+	width: 150px;
+	margin: auto;
+	height: 50px;
+	background-color: whitesmoke;
+	border: 1px solid wheat;
+	color: black;
+	outline: none;
+	transition: .6s ease;
+	border-radius: 25px
 }
-.mt1 button:hover{
+
+.mt1 button:hover {
 	cursor: pointer;
 	background-color: rgb(241, 181, 233);
 	color: black;
